--- a/client/src/App.css
+++ b/client/src/App.css
@@ -27,7 +27,7 @@ ul {
 	height: 100vh;
 }
 .home-text {
-	color: #fff;
+	color: #d4af37;
 	font-size: 90px;
 	font-weight: 600;
 	padding-top: 250px;
@@ -37,11 +37,13 @@ ul {
 	font-family: 'Roboto Condensed', sans-serif;
 }
 .home-button {
+	/* color: #d4af37; */
 	padding-top: 20px;
 	padding-left: 38%;
 }
 .home-button button {
-	background-color: #328888;
+	/* background-color: #328888; */
+	background-color: #d4af37;
 	border-radius: 5px;
 	padding: 10px;
 	width: 150px;
@@ -56,11 +58,11 @@ ul {
 	transition: color 0.2s ease-in-out;
 }
 .home-button button:hover {
-	background-color: rgb(119, 188, 197);
+	background-color: rgb(178, 145, 11);
 }
 
 .login-text {
-	color: #fff;
+	color: #d4af37;
 	opacity: 0.8;
 	font-size: 50px;
 	margin-top: -100px;
@@ -72,7 +74,7 @@ ul {
 
 .register-text {
 	opacity: 0.8;
-	color: #fff;
+	color: #d4af37;
 	font-size: 50px;
 	margin-top: 20px;
 	margin-bottom: 40px;
@@ -202,7 +204,7 @@ ul#nav li a:active {
 	background-color: transparent !important;
 }
 ul#nav li a:hover {
-	color: #328888;
+	color: #d4af37;
 }
 
 @media only screen and (max-width: 767px) {
